<!-- Copyright (c) 2014 Michael Simon. All rights reserved. This program 
	and the accompanying materials are made available under the terms of the 
	GNU Public License v3.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/gpl.html Contributors: Michael Simon - initial -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.kit.scc</groupId>
	<artifactId>bwreg</artifactId>
	<version>2.7.4</version>
	<packaging>pom</packaging>
	<name>bw Services Registration Webapp</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<modules>
		<module>bwreg-entities</module>
		<module>bwreg-jpa</module>
		<module>bwreg-service</module>
		<module>bwreg-webapp</module>
		<module>bwreg-ear</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.wildfly.bom</groupId>
    			<artifactId>wildfly-javaee8-with-tools</artifactId>
    			<version>17.0.1.Final</version>
    			<type>pom</type>
				<scope>import</scope>
				<optional>false</optional>
			</dependency>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>8.0</version>
			</dependency>
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>3.0.0</version>
			</dependency>			
			<dependency>
				<groupId>org.opensaml</groupId>
				<artifactId>opensaml-saml-api</artifactId>
				<version>3.4.6</version>
			</dependency>
			<dependency>
				<groupId>org.opensaml</groupId>
				<artifactId>opensaml-saml-impl</artifactId>
				<version>3.4.6</version>
			</dependency>
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity</artifactId>
				<version>1.7</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.9.4</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.13</version>
			</dependency>
			<dependency>
				<groupId>edu.vt.middleware</groupId>
				<artifactId>vt-ldap</artifactId>
				<version>3.3.7</version>
			</dependency>
			<dependency>
				<groupId>org.primefaces</groupId>
				<artifactId>primefaces</artifactId>
				<version>8.0</version>
			</dependency>
			<dependency>
				<groupId>org.primefaces.themes</groupId>
				<artifactId>all-themes</artifactId>
				<version>1.0.10</version>
			</dependency>
			<dependency>
			     <groupId>org.webjars</groupId>
			     <artifactId>font-awesome</artifactId>
			     <version>5.12.0</version>
			</dependency>
			<dependency>
				<groupId>org.omnifaces</groupId>
				<artifactId>omnifaces</artifactId>
				<version>3.6.1</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.2</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.2</version>
			</dependency>

			<dependency>
				<groupId>org.drools</groupId>
				<artifactId>drools-bom</artifactId>
				<type>pom</type>
				<version>6.2.0.Final</version>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jdt.core.compiler</groupId>
				<artifactId>ecj</artifactId>
				<version>4.3.1</version>
			</dependency>

			<dependency>
				<artifactId>dom4j</artifactId>
				<groupId>dom4j</groupId>
				<version>1.6.1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.2.3</version>
			</dependency>
			<dependency>
				<groupId>jcifs</groupId>
				<artifactId>jcifs</artifactId>
				<version>1.3.17</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk15on</artifactId>
				<version>1.67</version>
			</dependency>
			<dependency>
				<groupId>ch.ethz.ganymed</groupId>
				<artifactId>ganymed-ssh2</artifactId>
				<version>262</version>
			</dependency>
			<dependency>
				<groupId>org.apache.jclouds.api</groupId>
				<artifactId>openstack-keystone</artifactId>
				<version>1.9.0</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-validator-provider-11</artifactId>
				<version>3.0.3.Final</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jaxrs</artifactId>
				<version>3.0.3.Final</version>
			</dependency>
			
			<dependency>
			    <groupId>com.nimbusds</groupId>
			    <artifactId>oauth2-oidc-sdk</artifactId>
			    <version>9.2.2</version>
			</dependency>
			
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2/</url>
    	</repository>	
		<repository>
			<id>java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>https://maven.java.net/content/repositories/releases</url>
		</repository>
		<repository>
			<id>maven2-repository.jboss.com</id>
			<name>JBoss Repository for Maven</name>
			<url>https://repository.jboss.org/nexus/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>https://repository.primefaces.org</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>shibboleth.internet2.edu</id>
			<name>Internet2</name>
			<layout>default</layout>
			<url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>${deploy-repo.id}</id>
			<url>${deploy-repo.url}</url>
		</repository>
	</distributionManagement>
  
	<build>
		<defaultGoal>install</defaultGoal>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>11</source>
						<target>11</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ejb-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<ejbVersion>3.1</ejbVersion>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>
					<configuration>
						<wtpversion>2.0</wtpversion>
						<downloadSources>true</downloadSources>
						<additionalProjectFacets>
							<jst.jsf>2.3</jst.jsf>
						</additionalProjectFacets>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>prod</id>
			<properties>
				<bwreg.name.suffix></bwreg.name.suffix>
				<bwreg.faces.stage>Production</bwreg.faces.stage>
				<bwreg.hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</bwreg.hibernate.dialect>
				<bwreg.hibernate.datasource>java:/ds/bwidmDS</bwreg.hibernate.datasource>
				<bwreg.theme>kit-theme</bwreg.theme>
				<bwreg.css>std.css</bwreg.css>
				<bwreg.template>layout-template.xhtml</bwreg.template>
				<bwreg.template.head-bar>head-bar.xhtml</bwreg.template.head-bar>
				<bwreg.template.left-side-bar>left-side-bar.xhtml</bwreg.template.left-side-bar>
				<bwreg.template.left-side-bar-admin>left-side-bar-admin.xhtml</bwreg.template.left-side-bar-admin>
				<bwreg.template.footer>footer.xhtml</bwreg.template.footer>
				<bwreg.jboss-singleton>org.jboss.as.clustering.singleton</bwreg.jboss-singleton>
				<bwreg.jboss-singleton-activator>edu.kit.scc.webreg.service.timer.ClusterSingletonServiceActivator</bwreg.jboss-singleton-activator>
			</properties>
		</profile>
		<profile>
			<id>dev</id>
			<properties>
				<bwreg.name.suffix>-dev</bwreg.name.suffix>
				<bwreg.faces.stage>Development</bwreg.faces.stage>
				<bwreg.hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</bwreg.hibernate.dialect>
				<bwreg.hibernate.datasource>java:/ds/bwidmDS</bwreg.hibernate.datasource>
				<bwreg.theme>kit-theme</bwreg.theme>
				<bwreg.css>std.css</bwreg.css>
				<bwreg.template>layout-template.xhtml</bwreg.template>
				<bwreg.template.head-bar>head-bar.xhtml</bwreg.template.head-bar>
				<bwreg.template.left-side-bar>left-side-bar.xhtml</bwreg.template.left-side-bar>
				<bwreg.template.left-side-bar-admin>left-side-bar-admin.xhtml</bwreg.template.left-side-bar-admin>
				<bwreg.template.footer>footer.xhtml</bwreg.template.footer>
				<bwreg.jboss-singleton>org.jboss.as.clustering.singleton</bwreg.jboss-singleton>
				<bwreg.jboss-singleton-activator>edu.kit.scc.webreg.service.timer.ClusterSingletonServiceActivator</bwreg.jboss-singleton-activator>
			</properties>
		</profile>

		<profile>
			<id>prod-wildfly</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<bwreg.name.suffix></bwreg.name.suffix>
				<bwreg.faces.stage>Production</bwreg.faces.stage>
				<bwreg.hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</bwreg.hibernate.dialect>
				<bwreg.hibernate.datasource>java:/ds/bwidmDS</bwreg.hibernate.datasource>
				<bwreg.theme>kit-theme</bwreg.theme>
				<bwreg.css>std.css</bwreg.css>
				<bwreg.template>layout-template.xhtml</bwreg.template>
				<bwreg.template.head-bar>head-bar.xhtml</bwreg.template.head-bar>
				<bwreg.template.left-side-bar>left-side-bar.xhtml</bwreg.template.left-side-bar>
				<bwreg.template.left-side-bar-admin>left-side-bar-admin.xhtml</bwreg.template.left-side-bar-admin>
				<bwreg.template.footer>footer.xhtml</bwreg.template.footer>
				<bwreg.jboss-singleton>org.wildfly.clustering.singleton</bwreg.jboss-singleton>
				<bwreg.jboss-singleton-activator>edu.kit.scc.webreg.service.timer.WildflyClusterSingletonServiceActivator</bwreg.jboss-singleton-activator>
			</properties>
		</profile>
		<profile>
			<id>dev-wildfly</id>
			<properties>
				<bwreg.name.suffix>-dev</bwreg.name.suffix>
				<bwreg.faces.stage>Development</bwreg.faces.stage>
				<bwreg.hibernate.dialect>org.hibernate.dialect.PostgreSQLDialect</bwreg.hibernate.dialect>
				<bwreg.hibernate.datasource>java:/ds/bwidmDS</bwreg.hibernate.datasource>
				<bwreg.theme>kit-theme</bwreg.theme>
				<bwreg.css>std.css</bwreg.css>
				<bwreg.template>layout-template.xhtml</bwreg.template>
				<bwreg.template.head-bar>head-bar.xhtml</bwreg.template.head-bar>
				<bwreg.template.left-side-bar>left-side-bar.xhtml</bwreg.template.left-side-bar>
				<bwreg.template.left-side-bar-admin>left-side-bar-admin.xhtml</bwreg.template.left-side-bar-admin>
				<bwreg.template.footer>footer.xhtml</bwreg.template.footer>
				<bwreg.jboss-singleton>org.wildfly.clustering.singleton</bwreg.jboss-singleton>
				<bwreg.jboss-singleton-activator>edu.kit.scc.webreg.service.timer.WildflyClusterSingletonServiceActivator</bwreg.jboss-singleton-activator>
			</properties>
		</profile>

	</profiles>

</project>
